objects/SLSI__Notification__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Display_As_Of__c</fullName>
        <label>Display As Of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLSI__Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Departments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Departments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Offices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Offices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Notification_Departments__c</fullName>
        <label>Notification Departments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Notification_Detail__c</fullName>
        <description>To mention the important notes regarding notification.</description>
        <label>Notification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLSI__Notification_Office__c</fullName>
        <description>This list is used in conjunction with workflow rules to send an emails out to the employees at the specified offices.</description>
        <label>Notification Office-Deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Notification_Offices__c</fullName>
        <label>Notification Offices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Notification__c</fullName>
        <label>Notification-Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Departments__c</fullName>
        <formula>IF( SLSI__For_All_Departments__c , 'Notifications can only be published to particular departments if they are not intended to all departments i.e. for All Departments field is unchecked.', HYPERLINK('apex/SLSI__SL_IntranetDepartmentLookup?id='+ Id , 'Click to select departments' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Departments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Offices__c</fullName>
        <formula>IF( SLSI__For_All_Offices__c , 'Notifications can only be published to particular offices if they are not intended to all offices i.e. for All Offices field is unchecked.',  HYPERLINK('apex/SLSI__SL_IntranetOfficeLookup?id='+ Id , 'Click to select offices' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Department_Ids__c</fullName>
        <label>Selected Department Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Offices_Ids__c</fullName>
        <label>Selected Offices Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>SLSI__Active__c</columns>
        <columns>SLSI__Expiry_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__Test</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Test</value>
        </filters>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <recordTypes>
        <fullName>SLSI__Not_visible_to_cloned</fullName>
        <active>true</active>
        <label>Not visible to cloned</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLSI__visible_to_cloned</fullName>
        <active>true</active>
        <description>Closolution</description>
        <label>visible to cloned</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SLSI__DisplayDate_Greater_than_ExpiryDate</fullName>
        <active>true</active>
        <errorConditionFormula>SLSI__Display_As_Of__c  &gt;  SLSI__Expiry_Date__c</errorConditionFormula>
        <errorMessage>Display As of Date should be less than or equal to Expiry Date</errorMessage>
    </validationRules>
</CustomObject>